# rckd

./: .env.example  .gitignore  Cargo.toml  diesel.toml
migrations/2025-10-24-131756-0000_create_elus/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
