[package]
name = "rocket-diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"

